// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TWAMM Hook #executeTWAMMOrders gas crossing 1 initialized tick 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 569886,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders gas crossing 2 initialized ticks 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 732117,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders gas with no initialized ticks 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 428764,
}
`;
